--- a/style.css
+++ b/style.css
@@ -820,3 +820,55 @@ body .gform_wrapper ul li.gfield {
 .gform_wrapper .gform_footer input.button, .gform_wrapper .gform_footer input[type=submit] {transition: all 0.3s ease;font-size: 1em;background-color: var(--red);border:none;transition: all 0.3s ease;color: white;text-transform: uppercase;font-weight: inherit;height: 60px;line-height: 1px;width: 249px;/* float: right; */font-weight: 500;letter-spacing: 2px;} .gform_fields>li { margin-bottom: 0; }
 .gform_wrapper .gform_footer {padding: 0em 0 .625em !important;margin: 0.4em 0 0 !important;clear: both;}
 div#gform_confirmation_message_1 { text-align: center; font-size: 30px; color: white; max-width: 520px; padding: auto; margin: auto; padding: 50px 0px; }
+
+
+/* MEGA MENU */
+/**Mega Menu **/
+.navbar .container {
+    position: relative;
+}
+.navbar-nav, .navbar .collapse, .navbar-nav li {
+  position: static;
+}
+.menu-item-has-children, .menu-item-has-children .dropdown-menu {
+  left: auto;
+}
+.menu-item-has-children .dropdown-menu {
+  width: auto !important;
+}
+
+/* Make dropdown visible on hover */
+@media (min-width: 767px) {
+    .dropdown > .dropdown-menu {
+      position: absolute;
+      top: 100%;
+      left: auto;
+      z-index: 1000;
+      float: none;
+      min-width: 10rem;
+      padding: 1rem;
+      list-style: none;
+      border: none;
+      border-radius: 0;
+      box-shadow: none;
+      opacity: 0;
+      margin-top: 10px !important;
+      display: block;
+      visibility:hidden;
+      min-width: 150px;
+      transition: all  0.2s ease-in-out;
+    }
+    .dropdown:hover > .dropdown-menu {
+      visibility:visible;
+      display: block;
+      opacity: 1;
+      margin-top: 5px !important; 
+      border-bottom-right-radius: 8px;
+      border-bottom-left-radius: 8px;
+      transition: all  0.2s ease-in-out;
+    }
+      .mega-menu-parent.dropdown .dropdown-menu {
+      position: absolute;
+      left:  0;
+    }
+}
